# EVA

./: .cursorignore  .env.example  .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/eva_backend/: __init__.py  app.py  errors.py  logging_config.py  wsgi.py
backend/eva_backend/api/: __init__.py  eva_chat.py  eva_message.py  eva_skill_resolution.py  health.py  knowledge_debug.py
backend/eva_backend/config/: __init__.py  settings.py
backend/eva_backend/contracts/: __init__.py  message_models.py
backend/eva_backend/llm/: __init__.py  base.py  factory.py  local_llm.py  ollama_native.py  openai_compatible.py
backend/eva_backend/prompts/: __init__.py  loader.py
backend/eva_backend/prompts/templates/: __init__.py  eva_agent_orchestrator_system.txt  eva_system.txt  response_composer_system.txt  skill_router_system.txt  skill_select_system.txt
backend/eva_backend/services/: __init__.py  eva_message_handler.py  eva_orchestrator.py
backend/eva_backend/skills/: __init__.py  chunking.py  hashing_embed.py  knowledge_chunks.py  registry_loader.py  skill_index.py
backend/eva_backend/skills/knowledge/: booking.md  chart_clinical_qa.md  compliance_documentation.md  cpt_coding.md  eva_session_multitab.md  multi_clinic.md  note_summaries.md  scheduler_view.md  scope_grounding.md
backend/eva_backend/skills/registry/: skills.json
backend/eva_backend/state/: __init__.py  redis_client.py
backend/eva_backend/tools/: __init__.py
backend/eva_backend/utils/: __init__.py  json_extract.py
deploy/: Dockerfile  README.md  docker-compose.yml
(+25 files in other folders)
